--- a/src/Layout/navbar.scss
+++ b/src/Layout/navbar.scss
@@ -1,28 +1,79 @@
 @use "../scss/variables";
 
-.nav-container{
-    width: 15%;
-    height: 100vh;
-    padding: 1.5rem;
-    background-color:variables.$bg-col;
-    color: white; //Just for ilustration
+.nav-container {
+  width: 15%;
+  height: 100vh;
+  padding: 1.5rem;
+  background-color: variables.$bg-col;
+  color: white; //Just for ilustration
 }
 
-.side-navbar{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.side-navbar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.side-navbar .navbar-strategy_items{
+.side-navbar {
+  .navbar-strategy_items {
     width: 100%;
     height: 75%;
+    border-bottom: 1px solid variables.$gray-01 ;
+  }
 }
 
-.strategy_items{
-    display: flex;
-    flex-direction: column;
-    
+.nav-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  font-size: 1.3rem;
+  padding-bottom: 1rem;
+}
+.strategy_items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  font-size: 1.2rem;
+  font-weight: 200;
+  margin-top: 1rem;
+}
+
+.menu-item {
+  padding: 1rem 0.75rem;
+  display: flex;
+  gap: 12px;
+  cursor: pointer;
+}
+.active-link {
+  background-color: variables.$primary-col;
+  border-radius: 4px;
+  font-weight: 600;
+}
+
+.settings{
+    width: 100%;
+    height: 20%;
+    .log-out{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
+    }
+    button{
+        width: 100%;
+        height: 3rem;
+        padding: 12px 2.5rem;
+        font-size: 1rem;
+        color: white;
+        font-weight: 700;   
+        background-color: variables.$gray-02;
+        border-radius: 4px;
+        border:  none;
+        
+        
+    }
 }
