--- a/src/Layout/navbar.scss
+++ b/src/Layout/navbar.scss
@@ -1,6 +1,7 @@
 @use "../scss/variables";
 
 .nav-container {
+  display: flex;
   width: 15%;
   height: 100vh;
   padding: 1.5rem;
@@ -53,15 +54,23 @@
   border-radius: 4px;
   font-weight: 600;
 }
+.select-item{
+  display: flex;
+  flex-direction: column;
+}
 
 .settings{
     width: 100%;
     height: 20%;
+    display: flex;
+    align-items: flex-end;
     .log-out{
         width: 100%;
         display: flex;
         justify-content: center;
+        vertical-align: bottom;
         cursor: pointer;
+        
     }
     button{
         width: 100%;
@@ -73,7 +82,7 @@
         background-color: variables.$gray-02;
         border-radius: 4px;
         border:  none;
-        
+        cursor: pointer;
         
     }
 }
