--- a/src/components/gridData.scss
+++ b/src/components/gridData.scss
@@ -6,13 +6,14 @@ $secondary-color: #f1f1f1;
 $text-color: #333;
 
 .grid-macro-data {
+  width: 700px;
   margin: 10px;
   padding: 10px;
 
   background-color: white;
   font-size: 1rem;
-//   border: 1px solid $secondary-color;
-//   border-radius: 8px;
+  //   border: 1px solid $secondary-color;
+  //   border-radius: 8px;
 
   h2 {
     color: $primary-color;
@@ -28,7 +29,7 @@ $text-color: #333;
       color: white;
 
       th {
-        padding: 10px;
+        padding: 5px;
         text-align: left;
       }
     }
@@ -40,7 +41,7 @@ $text-color: #333;
         }
 
         td {
-          padding: 8px;
+          padding: 4px;
           border-bottom: 1px solid $secondary-color;
         }
       }
@@ -51,4 +52,10 @@ $text-color: #333;
     color: $text-color;
     font-size: 16px;
   }
+}
+#strengthId {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
 }
